--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -6,6 +6,7 @@
     --comment: #57be57;
     --white: #ffffff;
     --black: #000000;
+    --bpadding: 5px;
 }
 
 * {
@@ -139,7 +140,32 @@ header nav { /* fix sticky */
 
 /* Contact sec. - START */
 .contact {
+    background-color: aqua;
+    border: 1px solid black;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+    align-items: stretch;
+}
+
+.contact h3 {
+    background-color: red;
+    border: 1px solid black;
     font-size: 32px;
+    padding: var(--bpadding);
+}
+
+.contact address {
+    background-color: blue;
+    border: 1px solid black;
+    display: flex;
+    flex-wrap: wrap;
+    padding: var(--bpadding);
+}
+
+.contact address p {
+    margin: auto;
+    padding: 5px;
 }
 
 /* Copyright sec. - START */
@@ -153,5 +179,5 @@ footer {
 }
 
 .copyright {
-    padding: 5px;
+    padding: var(--bpadding);
 }
