--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -140,32 +140,27 @@ header nav { /* fix sticky */
 
 /* Contact sec. - START */
 .contact {
-    background-color: aqua;
-    border: 1px solid black;
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
-    justify-content: left;
-    align-items: stretch;
+    align-content: center;
 }
 
 .contact h3 {
-    background-color: red;
-    border: 1px solid black;
+    width: 100%;
+    display: flex;
+    justify-content: center;
     font-size: 32px;
     padding: var(--bpadding);
 }
-
+ 
 .contact address {
-    background-color: blue;
-    border: 1px solid black;
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
-    padding: var(--bpadding);
-}
-
-.contact address p {
-    margin: auto;
-    padding: 5px;
+    align-items: center;
+    font-size: 16px;
+    padding: var(--bpadding)
 }
 
 /* Copyright sec. - START */
