added two project links and one placeholder image

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -138,6 +138,9 @@ header nav { /* fix sticky */
     background-position: center;
 } */
 
+/* Projects sec. - START */
+
+
 /* Contact sec. - START */
 .contact {
     display: flex;
