--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -113,10 +113,6 @@ header nav { /* fix sticky */
 }
 
 /* About sec. - START */
-.about {
-    border: 1px solid red;
-}
-
 .about h2 {
     width: 100%;
     display: flex;
@@ -131,9 +127,6 @@ header nav { /* fix sticky */
 
 .about figure {
     text-align: center;
-}
-.about img {
-    border: 2px solid blueviolet;
 }
 
 .profile-info {
@@ -228,4 +221,54 @@ footer {
 
 .copyright {
     padding: var(--bpadding);
+}
+
+/* Media Queries - START */
+@media screen and (min-width: 575px) { 
+    .name, .home-brackets {
+        font-size: 92px;
+    }
+
+    .occupation, .nav-links {
+        font-size: 48px;
+    }
+
+    .avatar {
+        width: 100%;
+    }
+
+    .about h2, .projects h2, .contact h2 {
+        color: var(--element);
+        font-size: 54px;
+        border-bottom: 3px solid var(--comment);
+        margin: 0 auto 30px auto;
+        width: 40%;
+    }
+
+    .profile-info {
+        font-size: 32px;
+    }
+
+    .contact address {
+        font-size: 28px;
+        margin-bottom: 10px;
+    }
+
+    footer {
+        font-size: 28px;
+    }
+}
+
+@media screen and (min-width: 786px) {
+    .avatar {
+        width: 50px;
+    }
+}
+
+@media screen and (min-width: 980px) {
+    .avatar {
+        width: 34%;
+        float: left;
+        padding-right: 30px;
+    }
 }
