--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -161,12 +161,14 @@ header nav { /* fix sticky */
     flex-wrap: wrap;
 }
 
-.fig1 {
+.image {
+    position: relative;
     flex: 100%;
     padding: var(--bpadding);
 }
 
-.fig2, .fig3 {
+.image-sec-2 {
+    position: relative;
     flex: 50%;
     padding: var(--bpadding);
 }
@@ -175,13 +177,49 @@ header nav { /* fix sticky */
     width: 100%;
     height: 100%;
     border: 3px solid var(--secondary-color);
-    transition: 1.5s ease-in-out;
 }
 
-.rb-img:hover, .hz-img:hover, .ph-img:hover {
+/* .rb-img:hover, .hz-img:hover, .ph-img:hover {
     opacity: 0.5;
     border-radius: 50%;
     border-color: var(--element);
+} */
+
+.image-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: var(--white);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 1.25s;
+}
+
+.image-overlay > * {
+    transform: translateY(20px);
+    transition: transform 1.25s;
+}
+
+.image-overlay:hover {
+    opacity: 1;
+}
+
+.image-overlay:hover > * {
+    transform: translateY(0px);
+}
+
+.image-title {
+    font-size: 1.5em;
+}
+
+.image-description {
+    font-size: 1em;
 }
 
 /* Contact sec. - START */
